Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         
         /* Hero Section */
         .hero {
-            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1565689221354-d87f85d4aee2?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80') no-repeat center center/cover;
+            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://d14tal8bchn59o.cloudfront.net/0W4iXLlKuky7hwyUYVj1AykyTvfQqCFz5hZmBvXkOsU/w:960/plain/https://02f0a56ef46d93f03c90-22ac5f107621879d5667e0d7ed595bdb.ssl.cf2.rackcdn.com/sites/26758/photos/999231/car-detailing-08-large_original.jpg') no-repeat center center/cover;
             color: var(--white);
             text-align: center;
             padding: 12rem 0 6rem;
@@ -1231,3 +1231,4 @@
     </script>
 </body>
 </html>
+
